(library
 (name mldonkey_lib)
 (wrapped false)
 (libraries camlp4.lib str unix)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test))
 (foreign_stubs
  (language c)
  (names
   charsetstubs
   CryptoPP_stubs
   fst_hash
   heap_c
   md4
   md4_c
   md5_c
   os_stubs_c
   sha1_c
   stubs_c
   tiger
   zlibstubs))
 (foreign_stubs
  (language cxx)
  (names CryptoPP)
  (flags -fexceptions -fPIC))
 (c_library_flags -lz -lpthread -lstdc++))

(rule
 (alias camlp4of)
 (deps options.camlp4.ml)
 (targets options.ml)
 (action
  (run camlp4of -impl %{deps} -o %{targets})))

(rule
 (alias camlp4of)
 (deps gettext.camlp4.ml)
 (targets gettext.ml)
 (action
  (run camlp4of -impl %{deps} -o %{targets})))
