(library
 (name mldonkey_lib)
 (wrapped false)
 (modules
  arg2
  array2
  autoconf
  ; bzip2
  ; bzlib
  date
  file
  filename2
  fifo
  filepath
  ; gd
  genlex2
  gzip
  hashtbl2
  heap
  http_lexer
  int64ops
  intmap
  list2
  mlUnix
  options
  printexc2
  printf2
  string2
  syslog
  tar
  unix2
  unix32
  url
  zip
  zlib)
 (libraries IO camlp4.lib str unix)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test))
 (foreign_stubs
  (language c)
  (names heap_c md4 md5_c os_stubs_c sha1_c stubs_c tiger zlibstubs))
 (c_library_flags
  (-lz -lpthread)))

(ocamllex http_lexer)

(rule
 (deps options.camlp4.ml)
 (targets options.ml)
 (action
  (run camlp4of -impl %{deps} -o %{targets})))
